--- a/my-app/.travis.yml
+++ b/my-app/.travis.yml
@@ -6,6 +6,6 @@ node_js:
 services: 
     - docker
 before_install: 
-    - docker build -t yuwangjr/sample-app -f Dockerfile.dev .
+    - docker build -t 1141484703/sample-app -f Dockerfile.dev .
 script:     
-    - docker run -e CI=true yuwangjr/sample-app npm run test -- --coverage --watchAll=false
+    - docker run -e CI=true 1141484703/sample-app npm run test -- --coverage --watchAll=false
