--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 services: 
     - docker
 before_install: 
-    - docker build -t 1141484703/sample-app -f Dockerfile.dev .
+    - docker build -t 1141484703/react-app -f Dockerfile.dev .
 script:     
     - docker run -e CI=true 1141484703/sample-app npm run test -- --coverage --watchAll=false
     
