--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 before_install: 
     - docker build -t 1141484703/react-app -f Dockerfile.dev .
 script:     
-    - docker run -e CI=true 1141484703/sample-app npm run test -- --coverage --watchAll=false
+    - docker run -e CI=true 1141484703/react-app npm run test -- --coverage --watchAll=false
     
 deploy:
   provider: elasticbeanstalk
