--- a/my-app/Dockerfile.dev
+++ b/my-app/Dockerfile.dev
@@ -4,7 +4,7 @@ FROM node:16
 WORKDIR '/app'
 # Above we set the build environment as a folder called /app in the docker container to prevent clashes
 
-COPY package*.json .
+COPY package.json .
 # To prevent repeated npm installs anytime we make any change, we'd copy over the package.json and install things first
 
 RUN npm i
