--- a/my-app/.travis.yml
+++ b/my-app/.travis.yml
@@ -6,9 +6,9 @@ node_js:
 services: 
     - docker
 before_install: 
-    - docker build -t 1141484703/react-app -f Dockerfile.dev .
+    - docker build -t 1141484703/react-app/my-app -f Dockerfile.dev .
 script:     
-    - docker run -e CI=true 1141484703/react-app npm run test -- --coverage --watchAll=false
+    - docker run -e CI=true 1141484703/react-app/my-app npm run test -- --coverage --watchAll=false
     
 deploy:
   provider: elasticbeanstalk
